--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1;
+}
+
 #return-to-top {
     position: fixed;
     bottom: 20px;
@@ -42,3 +54,8 @@
 
 /* Extra Things */
 body{background: #eee ;font-family: 'Open Sans', sans-serif;}h3{font-size: 30px; font-weight: 400;text-align: center;margin-top: 50px;}h3 i{color: #444;}
+
+.footer-stick {
+    height: 50px;
+    margin-top: -50px;
+}
